# tpbattstat-applet

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  TPBattStatApplet_Factory.server  TPBattStatApplet_Factory.server.in  configure  configure.in  convert-icons.pl  index.html  install.sh  tpbattstat-applet.schemas  ubuntu-tp-smapi-install  uninstall.sh
icons/: svg_tool.pl
icons/idle/: .10.svg.swp
icons/xpm/24x24/: none.xpm  tpbattstat-applet.xpm
icons/xpm/24x24/charging/: 100.xpm  20.xpm  60.xpm  70.xpm
icons/xpm/24x24/discharging/: 0.xpm  100.xpm  20.xpm  40.xpm  50.xpm  80.xpm
icons/xpm/24x24/idle/: 0.xpm  10.xpm  20.xpm  30.xpm  70.xpm  90.xpm
icons/xpm/36x36/: none.xpm  tpbattstat-applet.xpm
icons/xpm/charging/: 0.xpm  10.xpm  30.xpm  40.xpm  50.xpm  80.xpm  90.xpm
icons/xpm/discharging/: 10.xpm  30.xpm  60.xpm  70.xpm  90.xpm
icons/xpm/idle/: 100.xpm  40.xpm  50.xpm  60.xpm  80.xpm
led-controls/: install-led-controls.sh  led  led-batt
led-controls/bash_completion.d/: led
smapi-battaccess/: install-smapi-battaccess.sh  smapi-battaccess.apparmor  uninstall-smapi-battaccess.sh
src/: Makefile.am  Makefile.in  actions.py  apparmor.in  battbalance.py  battery-info.c  battstatus.py  dzenprinter.py  gconfgui.py  gui.py  guimarkup.py  guiprefs.py  prefs.c  prefs.py  smapi-battaccess.apparmor  smapi-battaccess.c  tpbattstat-applet.c  tpbattstat-applet.h  tpbattstat-applet.py  tpbattstat-battinfo.c  tpbattstat-battinfo.h  tpbattstat-display.c  tpbattstat-display.h  tpbattstat-prefs.c  tpbattstat-prefs.h  tpbattstat.py
(+33 files in other folders)
